# neutrino_kernel_gs_raviole

./: BUILD.bazel  Kconfig  Makefile  Makefile.include  aoc_ipc_core.c  aoc_ipc_core.h  aoc_ipc_core_internal.h  build.config.gs101  build.config.slider  build_mixed.sh  build_slider.sh  exynos-reboot.c  google_battery.c  google_bms.h  google_charger.c  google_cpm.c  lwis_buffer.c  lwis_ioctl.c  lwis_transaction.c  max1720x_battery.c  max77759_charger.c  p9221_charger.c  p9221_charger.h  p9221_chip.c  pca9468_charger.c  vendor_boot_modules.slider
arch/arm64/boot/dts/google/: Makefile  gs101.dtsi
arch/arm64/configs/: neutrino_defconfig  neutrino_raviole_defconfig  slider_gki.fragment
drivers/: Kconfig  Makefile
drivers/google-modules/: Kconfig  Makefile
drivers/google-modules/amplifiers/audiometrics/: Kconfig  Makefile
drivers/google-modules/amplifiers/cs35l41/: Kconfig  Makefile
drivers/google-modules/amplifiers/cs35l45/: Makefile
drivers/google-modules/amplifiers/cs40l25/: Kconfig  Makefile
drivers/google-modules/amplifiers/cs40l26/: Makefile
drivers/google-modules/amplifiers/drv2624/: Makefile
drivers/google-modules/aoc/: Kconfig  Makefile  aoc_ipc_core.c  aoc_ipc_core.h  aoc_ipc_core_internal.h
drivers/google-modules/aoc/alsa/: Makefile
drivers/google-modules/aoc/usb/: Makefile  xhci_hooks_impl_whi.c
drivers/google-modules/bluetooth/broadcom/: Kconfig  Makefile
drivers/google-modules/bms/: Kconfig  Makefile  google_cpm.c
drivers/google-modules/display/samsung/: Kbuild  Kconfig  Makefile  exynos_drm_decon.c
drivers/google-modules/display/samsung/panel/: Kbuild
drivers/google-modules/edgetpu/drivers/edgetpu/: Kbuild  Kconfig  Makefile
drivers/google-modules/fingerprint/fpc/: Kconfig  Makefile
drivers/google-modules/gpu/mali_kbase/: Kconfig  Makefile
drivers/google-modules/gpu/mali_kbase/arbitration/: Kconfig
drivers/google-modules/gpu/mali_kbase/platform/: Kconfig
drivers/google-modules/gpu/mali_kbase/platform/pixel/: Kconfig
drivers/google-modules/gpu/mali_kbase/tests/kutf/: Kbuild
drivers/google-modules/gpu/mali_kbase/tests/mali_kutf_clk_rate_trace/kernel/: Kbuild
drivers/google-modules/gpu/mali_kbase/tests/mali_kutf_irq_test/: Kbuild
drivers/google-modules/gpu/mali_pixel/: Kconfig  Makefile
drivers/google-modules/lwis/: Kbuild  Kconfig  Makefile
drivers/google-modules/nfc/: Kconfig  Makefile
drivers/google-modules/power/reset/: Kconfig  Makefile
drivers/google-modules/touch/common/: Kconfig  Makefile
drivers/google-modules/touch/fts_touch/ftm5/: Makefile
drivers/google-modules/touch/sec_touch/: Makefile  sec_ts.c
drivers/google-modules/uwb/kernel/: Kconfig  Makefile
drivers/google-modules/uwb/kernel/drivers/net/ieee802154/: Makefile
drivers/google-modules/uwb/kernel/net/mcps802154/: Makefile
drivers/google-modules/wlan/bcmdhd/bcm43752/: Kconfig  Makefile
drivers/google-modules/wlan/bcmdhd/bcm4389/: Kconfig  Makefile
drivers/i2c/busses/: Kconfig  Makefile
drivers/pci/controller/dwc/: Kconfig  Makefile  pcie-exynos-rc.c
drivers/pinctrl/: Kconfig  Makefile
drivers/pinctrl/gs/: pinctrl-samsung.c
drivers/scsi/ufs/: Kconfig  Makefile  ufs-exynos-gs.h  ufs-exynos.c  ufs-pixel-crypto.c  ufs-pixel.c
drivers/soc/google/acpm/: Kconfig
drivers/soc/google/cal-if/: Makefile
drivers/spi/: Kconfig  Makefile  spi-s3c64xx-gs.c
drivers/staging/android/: debug_kinfo.c  debug_kinfo.h
drivers/usb/typec/tcpm/: max77759_contaminant.c  tcpci_max77759.c
fs/: Makefile
include/linux/: audit.h
include/soc/google/: debug-snapshot.h
include/uapi/drm/: drm_fourcc.h  samsung_drm.h
init/: Kconfig
kernel/: Makefile  module.c
kernel/bpf/: core.c
kernel/rcu/: Kconfig.debug
lib/: Kconfig.debug
net/: Kconfig
samsung/panel/: panel-samsung-drv.c
scripts/: Makefile.lib
sound/soc/codecs/: Kconfig
